--- a/package.json
+++ b/package.json
@@ -46,14 +46,17 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.16.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.3",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
@@ -64,6 +67,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19",
     "postcss": "^8",
